--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,19 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+ 
+/* Customize the scrollbar for WebKit browsers */
+::-webkit-scrollbar {
+    width: 1px; /* Decrease the width */
+    height: 0px;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #888; /* Customize the thumb color */
+    border-radius: 2px; /* Round the thumb */
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: #555; /* Customize the thumb color on hover */
+}
