--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,18 +2,26 @@
 @tailwind components;
 @tailwind utilities;
 
- 
+
 /* Customize the scrollbar for WebKit browsers */
 ::-webkit-scrollbar {
-    width: 1px; /* Decrease the width */
+    width: 1px;
+    /* Decrease the width */
     height: 0px;
 }
 
 ::-webkit-scrollbar-thumb {
-    background-color: #888; /* Customize the thumb color */
-    border-radius: 2px; /* Round the thumb */
+    background-color: #888;
+    /* Customize the thumb color */
+    border-radius: 2px;
+    /* Round the thumb */
 }
 
 ::-webkit-scrollbar-thumb:hover {
-    background-color: #555; /* Customize the thumb color on hover */
+    background-color: #555;
+    /* Customize the thumb color on hover */
+}
+
+.backlogo {
+    filter :drop-shadow(10px 4px 30px rgba(0, 0, 0, 0.25));
 }
