--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,12 +2,32 @@
 @tailwind components;
 @tailwind utilities;
 
+
+input#session-date {
+    display: inline-block;
+    position: relative;
+}
+
+input[type="date"]::-webkit-calendar-picker-indicator {
+    background: transparent;
+    bottom: 0;
+    color: transparent;
+    cursor: pointer;
+    height: auto;
+    left: 0;
+    position: absolute;
+    right: 0;
+    top: 0;
+    width: auto;
+}
+
 /* Customize the scrollbar for WebKit browsers */
 ::-webkit-scrollbar {
     width: 0px;
     /* Decrease the width */
     height: 0px;
 }
+
 
 ::-webkit-scrollbar-thumb {
     background-color: #888;
