--- a/client/src/components/EditEventModal/addeventmodal.css
+++ b/client/src/components/EditEventModal/addeventmodal.css
@@ -1,13 +1,10 @@
-.input-container input {
-    border: none;
-    box-sizing: border-box;
-    outline: 0;
-    padding: .75rem;
+
+input#session-date {
+    display: inline-block;
     position: relative;
-    width: 100%;
 }
 
-input[type="date"]::-webkit-calendar-picker-indicator {
+input[type="datetime-local"]::-webkit-calendar-picker-indicator {
     background: transparent;
     bottom: 0;
     color: transparent;
