--- a/client/src/App.css
+++ b/client/src/App.css
@@ -41,3 +41,15 @@ body {
         display: none;
     }
 }
+.calendar-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.7); /* Adjust the opacity as needed */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+  }
