--- a/client/src/components/EditEventModal/addeventmodal.css
+++ b/client/src/components/EditEventModal/addeventmodal.css
@@ -16,3 +16,22 @@ input[type="datetime-local"]::-webkit-calendar-picker-indicator {
     top: 0;
     width: auto;
 }
+
+
+input#session-time {
+    display: inline-block;
+    position: relative;
+}
+
+input[type="time"]::-webkit-calendar-picker-indicator {
+    background: transparent;
+    bottom: 0;
+    color: transparent;
+    cursor: pointer;
+    height: auto;
+    left: 0;
+    position: absolute;
+    right: 0;
+    top: 0;
+    width: auto;
+}
