--- a/client/src/App.css
+++ b/client/src/App.css
@@ -12,6 +12,10 @@ body {
     filter: grayscale(10%)
 }
 
+.MobileProfile {
+    display: none;
+}
+
 @media all and (display-mode: standalone) {
     .body {
         margin-bottom: 50px;
@@ -33,10 +37,15 @@ body {
         margin-bottom: 6rem;
     }
 
-    .selectoption{
+    .selectoption {
         display: none;
     }
+
+    .MobileProfile {
+        display: block;
+    }
 }
+
 
 .calendar-overlay {
     position: fixed;
@@ -44,9 +53,10 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.7); /* Adjust the opacity as needed */
+    background: rgba(0, 0, 0, 0.7);
+    /* Adjust the opacity as needed */
     display: flex;
     justify-content: center;
     align-items: center;
     z-index: 1000;
-  }
+}
