--- a/client/src/App.css
+++ b/client/src/App.css
@@ -46,6 +46,41 @@ body {
     }
 }
 
+.my-facebook-button-class {
+    width: 100%;
+    text-decoration: none;
+    display: inline-block;
+    border: 1px solid #ced4da;
+    background-color: #fff;
+    color: #343a40;
+    font-size: 14px;
+    line-height: 1.5;
+    border-radius: 0.375rem;
+    padding: 0.625rem 1.25rem;
+    cursor: pointer;
+    transition: background-color 0.3s ease, border-color 0.3s ease, color 0.3s ease;
+
+    &:hover {
+        background-color: #f8f9fa;
+        border-color: #cfd8dc;
+        color: #212529;
+    }
+
+    img {
+        width: 1.5rem;
+        /* Adjust the width of the image */
+        height: 1.5rem;
+        /* Adjust the height of the image */
+        margin-right: 0.625rem;
+        /* Adjust the spacing between the image and text */
+    }
+
+    .text-center {
+        text-align: center;
+    }
+
+
+}
 
 .calendar-overlay {
     position: fixed;
